--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -29,4 +29,4 @@ email:
   from-email: massd2002@163.com
   auth-code: 2368018
 
-kb-qa-interface-prefix: http://127.0.0.1:4523/m1/3866763-0-default
+kb-qa-interface-prefix: http://localhost:7861
