对接前端，完成论文接口

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,6 +16,11 @@ spring:
           max-idle: 8
           min-idle: 0
           max-wait: 100ms
+  # 文件上传
+  servlet:
+    multipart:
+      # 单个文件大小
+      max-file-size: 100MB
 
 mybatis-plus:
   global-config:
